# src/public/swagger/openapi.yaml
@@ -1,19 +1,18 @@
 openapi: 3.0.0
 info:
   title: 'Holiday Plan API'
-  description: 'API documentation for the Holiday Plan app'
+  description: 'API documentation for the Holiday Plan app.'
   contact:
     email: lughfalcao@gmail.com
   version: 1.0.0
 paths:
-  /api/v1: {  }
-  /register:
+  /api/register:
     post:
       tags:
         - Authentication
       summary: 'Create User'
       description: 'Register a new user'
-      operationId: e6d1fcf1feab4f92eacb72353c6dfbcd
+      operationId: d6f5d00c40f9de2e9272088aebe648c8
       requestBody:
         required: true
         content:
@@ -46,14 +45,14 @@ paths:
                   message: { type: string, example: 'User Created Successfully' }
                   token: { type: string, example: your_token_here }
                 type: object
-        '401':
+        '422':
           description: 'Validation Error'
           content:
             application/json:
               schema:
                 properties:
                   status: { type: boolean, example: false }
-                  message: { type: string, example: 'validation error' }
+                  message: { type: string, example: 'Validation Error' }
                   errors: { type: object, additionalProperties: true }
                 type: object
         '500':
@@ -65,13 +64,13 @@ paths:
                   status: { type: boolean, example: false }
                   message: { type: string, example: 'Internal Server Error' }
                 type: object
-  /login:
+  /api/login:
     post:
       tags:
         - Authentication
       summary: 'Login The User'
       description: 'Login an existing user'
-      operationId: 72bf786ad8ff53c7391309c836350a8d
+      operationId: 0f5784f47a3fcac35f86ec4e82d967d7
       requestBody:
         required: true
         content:
@@ -133,9 +132,11 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/HolidayPlan'
+                  $ref: '#/components/schemas/HolidayPlanCollection'
         '500':
           description: 'Internal Server Error'
+        '401':
+          description: Unauthorized
       security:
         -
           sanctum: []
@@ -157,9 +158,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HolidayPlan'
+                properties:
+                  data: { $ref: '#/components/schemas/HolidayPlan' }
+                type: object
         '500':
           description: 'Internal Server Error'
+        '401':
+          description: Unauthorized
       security:
         -
           sanctum: []
@@ -184,11 +189,15 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HolidayPlan'
+                properties:
+                  data: { $ref: '#/components/schemas/HolidayPlan' }
+                type: object
         '404':
           description: 'Holiday Plan not found'
         '500':
           description: 'Internal Server Error'
+        '401':
+          description: Unauthorized
       security:
         -
           sanctum: []
@@ -218,11 +227,15 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HolidayPlan'
+                properties:
+                  data: { $ref: '#/components/schemas/HolidayPlan' }
+                type: object
         '404':
           description: 'Holiday Plan not found'
         '500':
           description: 'Internal Server Error'
+        '401':
+          description: Unauthorized
       security:
         -
           sanctum: []
@@ -247,6 +260,8 @@ paths:
           description: 'Holiday Plan not found'
         '500':
           description: 'Internal Server Error'
+        '401':
+          description: Unauthorized
       security:
         -
           sanctum: []
@@ -277,6 +292,8 @@ paths:
           description: 'Holiday Plan not found'
         '500':
           description: 'Internal Server Error'
+        '401':
+          description: Unauthorized
       security:
         -
           sanctum: []
@@ -344,6 +361,13 @@ components:
               name:
                 type: string
             type: object
+      type: object
+    HolidayPlanCollection:
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/HolidayPlan'
       type: object
   securitySchemes:
     sanctum:
